--- a/thesis.bib
+++ b/thesis.bib
@@ -1,6 +1,397 @@
-@book{bruegge2004object,
-	title = {Object Oriented Software Engineering Using UML, Patterns, and Java},
-	author = {Bruegge, Bernd and Dutoit, Allen H},
-	year = {2009},
+@book{bruegge2009,
+	title     = {Object Oriented Software Engineering Using UML, Patterns, and Java},
+	author    = {Bruegge, Bernd and Dutoit, Allen H},
+	year      = {2009},
 	publisher = {Prentice Hall}
+}
+
+@unpublished{mirmotahari2018individualized,
+    title     = {Individualized Assessment and Automated Feedback in Undergraduate Computer Science Education},
+    author    = {Mirmotahari, O. and Damsa, C.},
+    note      = {Unpublished manuscript},
+    year      = {2018}
+}
+
+@inproceedings{le2009,
+    title     = {Building Learner Profile in Adaptive e-Learning Systems},
+    author    = {Le, D.-L. and Nguyen, A.-T. and Nguyen, D.-T. and Hunger, A.},
+    booktitle = {Proceedings of the Adaptive e-Learning Systems Workshop},
+    pages     = {15--17},
+    year      = {2009}
+}
+
+@phdthesis{ballantyne2022,
+    title     = {Creating Robust Educational Experiences Online},
+    author    = {Ballantyne, E.},
+    school    = {Mount Saint Vincent University},
+    year      = {2022}
+}
+
+@article{hattie2007,
+    title     = {The Power of Feedback},
+    author    = {Hattie, John and Timperley, Helen},
+    journal   = {Review of Educational Research},
+    volume    = {77},
+    number    = {1},
+    pages     = {81--112},
+    year      = {2007},
+    doi       = {10.3102/003465430298487}
+}
+
+@article{shute2008,
+    title     = {Focus on Formative Feedback},
+    author    = {Shute, Valerie J.},
+    journal   = {Review of Educational Research},
+    volume    = {78},
+    number    = {1},
+    pages     = {153--189},
+    year      = {2008},
+    doi       = {10.3102/0034654307313795}
+}
+
+@article{hatziapostolou2010,
+    title     = {Enhancing the Impact of Formative Feedback on Student Learning through an Online Feedback System},
+    author    = {Hatziapostolou, T. and Paraskakis, I.},
+    journal   = {Electronic Journal of E-Learning},
+    volume    = {8},
+    pages     = {111--122},
+    year      = {2010},
+    url       = {https://api.semanticscholar.org/CorpusID:14519912}
+}
+
+@article{ozdamli2016,
+    title     = {Flipped Classroom Approach},
+    author    = {Ozdamli, F. and Asiksoy, G.},
+    journal   = {World Journal on Educational Technology: Current Issues},
+    volume    = {8},
+    number    = {2},
+    pages     = {98--105},
+    year      = {2016},
+    doi       = {10.18844/wjet.v8i2.640}
+}
+
+@article{turnbull2021,
+    title     = {Learning Management Systems: A Review of the Research Methodology Literature in Australia and China},
+    author    = {Turnbull, Darren and Chugh, Ritesh and Luck, Jo},
+    journal   = {International Journal of Research & Method in Education},
+    volume    = {44},
+    number    = {2},
+    pages     = {164--178},
+    year      = {2021},
+    doi       = {10.1080/1743727X.2020.1737002}
+}
+
+@article{krusche2022,
+    author    = {Krusche, Stephan},
+    title     = {Semi-Automatic Assessment of Modeling Exercises Using Supervised Machine Learning},
+    year      = {2022},
+    month     = {January}
+}
+
+@article{krusche2018,
+    author    = {Krusche, Stephan and Seitz, Andreas},
+    title     = {ArTEMiS: An Automatic Assessment Management System for Interactive Learning},
+    year      = {2018},
+    isbn      = {9781450351034},
+    publisher = {Association for Computing Machinery},
+    address   = {New York, NY, USA},
+    url       = {https://doi.org/10.1145/3159450.3159602},
+    doi       = {10.1145/3159450.3159602},
+    booktitle = {Proceedings of the 49th ACM Technical Symposium on Computer Science Education},
+    pages     = {284-289},
+    numpages  = {6},
+    location  = {Baltimore, Maryland, USA},
+    series    = {SIGCSE '18}
+}
+
+@article{schwind2023,
+	title     = {Generalizing Machine-Learning Based Assessments},
+	author    = {P. Schwind},
+    journal   = {Master Thesis, TUM},
+	year      = {2023}
+}
+
+@article{kasneci2023,
+    title     = {ChatGPT for Good? On Opportunities and Challenges of Large Language Models for Education},
+    author    = {Kasneci, Enkelejda and Seßler, Kathrin and Küchemann, Stefan and Bannert, Maria and Dementieva, Daryna and Fischer, Frank and Gasser, Urs and Groh, Georg and Günnemann, Stephan and Hüllermeier, Eyke and Krusche, Stephan},
+    year      = {2023},
+    month     = {01}
+}
+
+@article{dietrich2023,
+    title     = {Leveraging LLMs for Automated Feedback Generation on Exercises},
+    author    = {F. T. J. Dietrich},
+    journal   = {Master Thesis, TUM},
+    year      = {2023}
+}
+
+@article{monaco2007,
+    author    = {Monaco, Michele and Martin, Malissa},
+    title     = {The Millennial Student: A New Generation of Learners},
+    journal   = {Athletic Training Education Journal},
+    volume    = {2},
+    number    = {2},
+    pages     = {42-46},
+    year      = {2007},
+    month     = {April},
+    issn      = {1947-380X},
+    doi       = {10.4085/1947-380X-2.2.42},
+    url       = {https://doi.org/10.4085/1947-380X-2.2.42},
+    eprint    = {https://meridian.allenpress.com/atej/article-pdf/2/2/42/1450746/1947-380x-2\_2\_42.pdf},
+}
+
+@article{liu2020,
+    author      = {Haochen Liu and Zitao Liu and Zhongqin Wu and Jiliang Tang},
+    title       = {Personalized Multimodal Feedback Generation in Education},
+    journal     = {CoRR},
+    volume      = {abs/2011.00192},
+    year        = {2020},
+    url         = {https://arxiv.org/abs/2011.00192},
+    eprinttype  = {arXiv},
+    eprint      = {2011.00192},
+    timestamp   = {Wed, 20 Apr 2022 13:48:12 +0200},
+    biburl      = {https://dblp.org/rec/journals/corr/abs-2011-00192.bib},
+    bibsource   = {dblp computer science bibliography, https://dblp.org}
+}
+ @article{bulut2020, 
+    title        = {Guidelines for Generating Effective Feedback from E-Assessments}, 
+    journal      = {Hacettepe Üniversitesi Eğitim Fakültesi Dergisi}, 
+    volume       = {35}, 
+    pages        = {60-72}, 
+    year         = {2020}, 
+    author       = {Bulut, Okan and Cutumisu, Maria and Singh, Deepak and Aquilina, Alexandra M.}, 
+    keywords     = {E-assessment, feedback, score reporting, test development, computerized assessment}, 
+    number       = {Special Issue}, 
+    publisher    = {Hacettepe University},
+    doi          = {10.16986/HUJE.2020063705}
+}
+
+@article{mirmotahari2018,
+    author    = {Mirmotahari, Omid and Damsa, Crina},
+    title     = {Individualized assessment and automated feedback in undergraduate computer science education},
+    year      = {2018},
+    month     = {January},
+    doi       = {10.16986/HUJE.2020063705}
+}
+@article{maier2022,
+    title = {Personalized feedback in digital learning environments: Classification framework and literature review},
+    journal = {Computers and Education: Artificial Intelligence},
+    volume = {3},
+    pages = {100080},
+    year = {2022},
+    issn = {2666-920X},
+    doi = {https://doi.org/10.1016/j.caeai.2022.100080},
+    url = {https://www.sciencedirect.com/science/article/pii/S2666920X22000352},
+    author = {Uwe Maier and Christian Klotz}
+}
+
+@article{bousalem2022,
+    author={Bousalem, Samia and Benchikha, Fouzia and Chelghoum, Massinissa},
+    booktitle={2022 2nd International Conference on New Technologies of Information and Communication (NTIC)},
+    title={Modeling Learner Profiles using Ontologies and Machine Learning},
+    year={2022},
+    pages={1-6},
+    keywords={Electronic learning;Semantics;Education;Machine learning;Ontologies;Prediction algorithms;Proposals;E-learning System;Learner Profile;Machine Learning;Ontology;Learning Style},
+    doi={10.1109/NTIC55069.2022.10100497}
+}
+
+@article{bennani2022,
+    title={Integrating Machine Learning into Learner Profiling for Adaptive and Gamified Learning System},
+    author={Bennani, Souha and Maalel, Ahmed and Ben Ghezala, Henda and Daouahi, Achref},
+    booktitle={International Conference on Computational Collective Intelligence},
+    pages={65--71},
+    year={2022},
+    organization={Springer}
+}
+
+@misc{tan2023,
+    title={User Modeling in the Era of Large Language Models: Current Research and Future Directions}, 
+    author={Zhaoxuan Tan and Meng Jiang},
+    year={2023},
+    eprint={2312.11518},
+    archivePrefix={arXiv},
+    primaryClass={cs.CL},
+    url={https://arxiv.org/abs/2312.11518}, 
+}
+
+@article{lilley2007,
+    author = {Lilley, M. and Barker, Trevor},
+    year = {2007},
+    month = {January},
+    pages = {},
+    title = {Students' perceived usefulness of formative feedback for a computer-adaptive test},
+    volume = {5},
+    journal = {The Electronic Journal of e-Learning}
+}
+
+@article{hu2024,
+  author={Hu, Bihao and Zheng, Longwei and Zhu, Jiayi and Ding, Lishan and Wang, Yilei and Gu, Xiaoqing},
+  journal={IEEE Transactions on Learning Technologies}, 
+  title={Teaching Plan Generation and Evaluation With GPT-4: Unleashing the Potential of LLM in Instructional Design}, 
+  year={2024},
+  volume={17},
+  number={},
+  pages={1445-1459},
+  keywords={Education;Mathematics;Mathematical models;Task analysis;Technological innovation;Standards;Knowledge based systems;Automated teaching plan generation;instructional design capabilities;large language models (LLMs);mathematical problem chains;pedagogical content knowledge (PCK)},
+  doi={10.1109/TLT.2024.3384765}}
+
+@article{bernius2019,
+    author    = {Bernius, Jan Philip and Bruegge, Bernd},
+    title     = {Toward the automatic assessment of text exercises},
+    journal   = {In 2nd Workshop on Innovative Software Engineering Education (ISEE)},
+    pages     = {19--22},
+    year      = {2019}
+}
+
+@article{bernius2022A,
+    author    = {Bernius, Jan Philip},
+    title     = {Automatic Assessment of Textual Exercises},
+    journal   = {PhD thesis, Technische Universität München},
+    year      = {2022}
+}
+
+@article{bernius2022B,
+    author    = {Bernius, Jan Philip and Krusche, Stephan and Bruegge, Bernd},
+    title     = {Machine learning based feedback on textual student answers in large courses},
+    journal   = {Computers and Education: Artificial Intelligence},
+    volume    = {3},
+    number    = {100081},
+    year      = {2022},
+    month     = {January}
+}
+
+@article{cohn2024,
+    title={A Chain-of-Thought Prompting Approach with LLMs for Evaluating Students' Formative Assessment Responses in Science},
+    author={Cohn, Clayton and Hutchins, Nicole and Le, Tuan and Biswas, Gautam},
+    journal={Proceedings of the AAAI Conference on Artificial Intelligence},
+    volume={38},
+    number={21},
+    year={2024},
+    month={March},
+    pages={23182-23190}
+}
+
+@article{jauhiainen2024,
+    title={Generative AI in Education: ChatGPT-4 in Evaluating Students' Written Responses},
+    author={Jauhiainen, Jussi S. and Garagorry Guerra, Agustín},
+    journal={Innovations in Education and Teaching International},
+    volume={62},
+    number={1},
+    year={2024},
+    month={November},
+    pages={1-18},
+    doi={10.1080/14703297.2024.2422337}
+}
+
+@article{lohr2024,
+    title={You're (Not) My Type—Can LLMs Generate Feedback of Specific Types for Introductory Programming Tasks?},
+    author={Lohr, D. and Keuning, H. and Kiesler, N.},
+    journal={arXiv preprint arXiv:2412.03516},
+    year={2024},
+    month={December},
+    doi={10.48550/arXiv.2412.03516}
+}
+
+@article{naz2024,
+    title={Exploring the Feasibility and Efficacy of ChatGPT3 for Personalized Feedback in Teaching},
+    author={Naz, I. and Robertson, R.},
+    journal={Electronic Journal of E-Learning},
+    volume={22},
+    number={2},
+    pages={98-111},
+    year={2024},
+    doi={10.34190/ejel.22.2.3345}
+}
+
+@article{dai2023,
+    author={Dai, Wei and Lin, Jionghao and Jin, Hua and Li, Tongguang and Tsai, Yi-Shan and Gašević, Dragan and Chen, Guanliang},
+    booktitle={2023 IEEE International Conference on Advanced Learning Technologies (ICALT)}, 
+    title={Can Large Language Models Provide Feedback to Students? A Case Study on ChatGPT}, 
+    year={2023},
+    volume={},
+    number={},
+    pages={323-325},
+    keywords={Chatbots;Task analysis;Feedback Generation;Automated Feedback;Large Language Model;Feedback Effectiveness},
+    doi={10.1109/ICALT58122.2023.00100}
+}
+
+
+@article{morales2024,
+    AUTHOR = {Morales-Chan, Miguel and Amado-Salvatierra, Hector R. and Medina, José Amelio and Barchino, Roberto and Hernández-Rizzardini, Rocael and Teixeira, António Moreira},
+    TITLE = {Personalized Feedback in Massive Open Online Courses: Harnessing the Power of LangChain and OpenAI API},
+    JOURNAL = {Electronics},
+    VOLUME = {13},
+    YEAR = {2024},
+    NUMBER = {10},
+    ARTICLE-NUMBER = {1960},
+    URL = {https://www.mdpi.com/2079-9292/13/10/1960},
+    ISSN = {2079-9292},
+    ABSTRACT = {Studies show that feedback greatly improves student learning outcomes, but achieving this level of personalization at scale is a complex task, especially in the diverse and open environment of Massive Open Online Courses (MOOCs). This research provides a novel method for using cutting-edge artificial intelligence technology to enhance the feedback mechanism in MOOCs. The main goal of this research is to leverage AI’s capabilities to automate and refine the MOOC feedback process, with special emphasis on courses that allow students to learn at their own pace. The combination of LangChain—a cutting-edge framework specifically designed for applications that use language models—with the OpenAI API forms the basis of this work. This integration creates dynamic, scalable, and intelligent environments that can provide students with individualized, insightful feedback. A well-organized assessment rubric directs the feedback system, ensuring that the responses are both tailored to each learner’s unique path and aligned with academic standards and objectives. This initiative uses Generative AI to enhance MOOCs, making them more engaging, responsive, and successful for a diverse, international student body. Beyond mere automation, this technology has the potential to transform fundamentally how learning is supported in digital environments and how feedback is delivered. The initial results demonstrate increased learner satisfaction and progress, thereby validating the effectiveness of personalized feedback powered by AI.},
+    DOI = {10.3390/electronics13101960}
+}
+
+
+
+
+@article{pathak2025,
+    title={Rubric Is All You Need: Enhancing LLM-based Code Evaluation With Question-Specific Rubrics},
+    author={Pathak, A. and Gandhi, R. and Uttam, V. and Devansh, Nakka, Y. and Jindal, A. R. and Ghosh, P. and Ramamoorthy, A. and Verma, S. and Mittal, A. and Ased, A. and Khatri, C. and Challa, J. S. and Kumar, D.},
+    journal={arXiv preprint arXiv:2503.23989},
+    year={2025},
+    month={March},
+    doi={10.48550/arXiv.2503.23989}
+}
+
+@article{qiu2025,
+    title={SteLLA: A Structured Grading System Using LLMs with RAG},
+    author={Qiu, H. and White, B. and Ding, A. and Costa, R. and Hachem, A. and Ding, W. and Chen, P.},
+    journal={arXiv preprint arXiv:2501.09092},
+    year={2025},
+    month={January},
+    doi={10.48550/arXiv.2501.09092}
+}
+
+@article{ria2025,
+    title={LLM-Driven Feedback for Enhancing Conceptual Design Learning in Database Systems Courses},
+    author={Riazi, S. and Rooshenas, P.},
+    journal={Proceedings of the 56th ACM Technical Symposium on Computer Science Education V},
+    year={2025},
+    month={January},
+    doi={10.1145/3641554.3701940}
+}
+
+@article{stahl2024,
+    title={Exploring LLM Prompting Strategies for Joint Essay Scoring and Feedback Generation},
+    author={Stahl, M. and Biermann, L. and Nehring, A. and Wachsmuth, H.},
+    journal={arXiv preprint arXiv:2404.15845},
+    year={2024},
+    month={April},
+    doi={10.48550/arXiv.2404.15845}
+}
+
+@article{stamper2024,
+    title={Enhancing LLM-Based Feedback: Insights from Intelligent Tutoring Systems and the Learning Sciences},
+    author={Stamper, J. and Xiao, R. and Hou, X.},
+    journal={arXiv preprint arXiv:2405.04645},
+    year={2024},
+    month={May},
+    doi={10.48550/arXiv.2405.04645}
+}
+
+@article{lin2023,
+    title={Using Large Language Models to Provide Explanatory Feedback to Human Tutors},
+    author={Lin, J. and Thomas, D. R. and Han, F. and Gupta, S. and Tan, W. and Nguyen, N. D. and Koedinger, K. R.},
+    journal={arXiv preprint arXiv:2306.15498},
+    year={2023},
+    month={June},
+    doi={10.48550/arXiv.2306.15498}
+}
+
+@article{tang2024,
+    title={SPHERE: Scaling Personalized Feedback in Programming Classrooms with Structured Review of LLM Outputs},
+    author={Tang, X. and Wong, S. and Huynh, M. and He, Z. and Yang, Y. and Chen, Y.},
+    journal={arXiv preprint arXiv:2410.16513},
+    year={2024},
+    month={October},
+    doi={10.48550/arXiv.2410.16513}
 }
