--- a/thesis.bib
+++ b/thesis.bib
@@ -82,10 +82,11 @@
 }
 
 @article{krusche2022,
-    author    = {Krusche, Stephan},
-    title     = {Semi-Automatic Assessment of Modeling Exercises Using Supervised Machine Learning},
-    year      = {2022},
-    month     = {January}
+    author = {Krusche, Stephan},
+    year = {2022},
+    month = {January},
+    title = {Semi-Automatic Assessment of Modeling Exercises using Supervised Machine Learning},
+    doi = {10.24251/HICSS.2022.108}
 }
 
 @article{krusche2018,
@@ -111,11 +112,17 @@
 	year      = {2023}
 }
 
-@article{kasneci2023,
-    title     = {ChatGPT for Good? On Opportunities and Challenges of Large Language Models for Education},
-    author    = {Kasneci, Enkelejda and Seßler, Kathrin and Küchemann, Stefan and Bannert, Maria and Dementieva, Daryna and Fischer, Frank and Gasser, Urs and Groh, Georg and Günnemann, Stephan and Hüllermeier, Eyke and Krusche, Stephan},
-    year      = {2023},
-    month     = {01}
+@article{ci2023,
+    title = {ChatGPT for good? On opportunities and challenges of large language models for education},
+    journal = {Learning and Individual Differences},
+    volume = {103},
+    pages = {102274},
+    year = {2023},
+    issn = {1041-6080},
+    doi = {https://doi.org/10.1016/j.lindif.2023.102274},
+    url = {https://www.sciencedirect.com/science/article/pii/S1041608023000195},
+    author = {Enkelejda Kasneci and Kathrin Sessler and Stefan Küchemann and Maria Bannert and Daryna Dementieva and Frank Fischer and Urs Gasser and Georg Groh and Stephan Günnemann and Eyke Hüllermeier and Stephan Krusche and Gitta Kutyniok and Tilman Michaeli and Claudia Nerdel and Jürgen Pfeffer and Oleksandra Poquet and Michael Sailer and Albrecht Schmidt and Tina Seidel and Matthias Stadler and Jochen Weller and Jochen Kuhn and Gjergji Kasneci},
+    keywords = {Large language models, Artificial intelligence, Education, Educational technologies}
 }
 
 @article{dietrich2023,
@@ -261,15 +268,20 @@
 }
 
 @article{cohn2024,
-    title={A Chain-of-Thought Prompting Approach with LLMs for Evaluating Students' Formative Assessment Responses in Science},
-    author={Cohn, Clayton and Hutchins, Nicole and Le, Tuan and Biswas, Gautam},
-    journal={Proceedings of the AAAI Conference on Artificial Intelligence},
-    volume={38},
-    number={21},
-    year={2024},
-    month={March},
-    pages={23182-23190}
+   title={A Chain-of-Thought Prompting Approach with LLMs for Evaluating Students' Formative Assessment Responses in Science},
+   volume={38},
+   ISSN={2159-5399},
+   url={http://dx.doi.org/10.1609/aaai.v38i21.30364},
+   DOI={10.1609/aaai.v38i21.30364},
+   number={21},
+   journal={Proceedings of the AAAI Conference on Artificial Intelligence},
+   publisher={Association for the Advancement of Artificial Intelligence (AAAI)},
+   author={Cohn, Clayton and Hutchins, Nicole and Le, Tuan and Biswas, Gautam},
+   year={2024},
+   month={March},
+   pages={23182-23190}
 }
+
 
 @article{jauhiainen2024,
     title={Generative AI in Education: ChatGPT-4 in Evaluating Students' Written Responses},
@@ -326,7 +338,6 @@
     ARTICLE-NUMBER = {1960},
     URL = {https://www.mdpi.com/2079-9292/13/10/1960},
     ISSN = {2079-9292},
-    ABSTRACT = {Studies show that feedback greatly improves student learning outcomes, but achieving this level of personalization at scale is a complex task, especially in the diverse and open environment of Massive Open Online Courses (MOOCs). This research provides a novel method for using cutting-edge artificial intelligence technology to enhance the feedback mechanism in MOOCs. The main goal of this research is to leverage AI’s capabilities to automate and refine the MOOC feedback process, with special emphasis on courses that allow students to learn at their own pace. The combination of LangChain—a cutting-edge framework specifically designed for applications that use language models—with the OpenAI API forms the basis of this work. This integration creates dynamic, scalable, and intelligent environments that can provide students with individualized, insightful feedback. A well-organized assessment rubric directs the feedback system, ensuring that the responses are both tailored to each learner’s unique path and aligned with academic standards and objectives. This initiative uses Generative AI to enhance MOOCs, making them more engaging, responsive, and successful for a diverse, international student body. Beyond mere automation, this technology has the potential to transform fundamentally how learning is supported in digital environments and how feedback is delivered. The initial results demonstrate increased learner satisfaction and progress, thereby validating the effectiveness of personalized feedback powered by AI.},
     DOI = {10.3390/electronics13101960}
 }
 
@@ -394,4 +405,83 @@
     year={2024},
     month={October},
     doi={10.48550/arXiv.2410.16513}
+}
+
+@article{chun2025,
+      title={PlanGlow: Personalized Study Planning with an Explainable and Controllable LLM-Driven System}, 
+      author={Jiwon Chun and Yankun Zhao and Hanlin Chen and Meng Xia},
+      year={2025},
+      eprint={2504.12452},
+      archivePrefix={arXiv},
+      primaryClass={cs.HC},
+      url={https://arxiv.org/abs/2504.12452}, 
+}
+
+
+@article{cuellar2025,
+    author = {Cuéllar, Óscar and Contero, Manuel and Hincapié, Mauricio},
+    title = {Personalized and Timely Feedback in Online Education: Enhancing Learning with Deep Learning and Large Language Models},
+    journal = {Multimodal Technologies and Interaction},
+    volume = {9},
+    year = {2025},
+    number = {5},
+    article-number = {45},
+    url = {https://www.mdpi.com/2414-4088/9/5/45},
+    issn = {2414-4088},
+    abstract = {This study investigates an Adaptive Feedback System (AFS) that integrates deep learning (a recurrent neural network trained with historical student data) and GPT-4 to provide personalized feedback in a Digital Art course. In a quasi-experimental design, the intervention group (n = 42) received weekly feedback generated from model predictions, while the control group (n = 39) followed the same program without this intervention across four learning blocks or levels. The results revealed (1) a cumulative effect with a significant performance difference in the fourth learning block (+12.63 percentage points); (2) a reduction in performance disparities between students with varying levels of prior knowledge in the experimental group (−56.5%) versus an increase in the control group (+103.3%); (3) an “overcoming effect” where up to 42.9% of students surpassed negative performance predictions; and (4) a positive impact on active participation, especially in live class attendance (+30.21 points) and forum activity (+9.79 points). These findings demonstrate that integrating deep learning with LLMs can significantly improve learning outcomes in online educational environments, particularly for students with limited prior knowledge.},
+    doi = {10.3390/mti9050045}
+}
+
+@article{kochmar2020,
+    author = {Kochmar, E. and Vu, D. D. and Belfer, R. and Gupta, V. and Serban, I. V. and Pineau, J.},
+    title = {Automated Personalized Feedback Improves Learning Gains in An Intelligent Tutoring System},
+    journal = {Artificial Intelligence in Education},
+    volume = {12164},
+    pages = {140-16},
+    year = {2020},
+    doi = {10.1007/978-3-030-52240-7_26},
+    pmcid = {PMC7334734}
+}
+
+@article{lo2023,
+    title = {The CLEAR path: A framework for enhancing information literacy through prompt engineering},
+    journal = {The Journal of Academic Librarianship},
+    volume = {49},
+    number = {4},
+    pages = {102720},
+    year = {2023},
+    issn = {0099-1333},
+    doi = {https://doi.org/10.1016/j.acalib.2023.102720},
+    url = {https://www.sciencedirect.com/science/article/pii/S0099133323000599},
+    author = {Leo S. Lo}
+}
+
+@article{keuning2018,
+    author = {Keuning, Hieke and Jeuring, Johan and Heeren, Bastiaan},
+    title = {A Systematic Literature Review of Automated Feedback Generation for Programming Exercises},
+    year = {2018},
+    volume = {19},
+    number = {1},
+    url = {https://doi.org/10.1145/3231711},
+    doi = {10.1145/3231711},
+    journal = {ACM Trans. Comput. Educ.},
+    month = {September},
+    articleno = {3},
+    numpages = {43},
+    keywords = {Systematic literature review, automated feedback, learning programming, programming tools}
+}
+
+@article{oli2024,
+      title={Can LLMs Identify Gaps and Misconceptions in Students' Code Explanations?}, 
+      author={Priti Oli and Rabin Banjade and Andrew M. Olney and Vasile Rus},
+      year={2024},
+      doi={10.48550/arXiv.2501.10365}
+}
+
+@inproceedings{economides2005,
+  title={Adaptive feedback evaluation},
+  author={Economides, Anastasios A},
+  booktitle={Proc. Fifth Int’l Conf. Distance Learning and Web Eng.(WSEAS’05)},
+  pages={134--139},
+  year={2005}
 }
