--- a/thesis.bib
+++ b/thesis.bib
@@ -485,3 +485,15 @@
   pages={134--139},
   year={2005}
 }
+
+@book{biggs1982,
+  author    = {Biggs, John B. and Collis, Kevin F.},
+  title     = {Evaluating the Quality of Learning: The SOLO Taxonomy (Structure of the Observed Learning Outcome)},
+  year      = {1982},
+  series    = {Educational Psychology Series},
+  publisher = {Academic Press},
+  address   = {New York},
+  isbn      = {978-0-12-097552-5},
+  url       = {https://www.sciencedirect.com/book/9780120975525/evaluating-the-quality-of-learning},
+  urldate   = {2025-08-20}
+}
