migrate table format

--- a/thesis.bib
+++ b/thesis.bib
@@ -497,3 +497,13 @@
   url       = {https://www.sciencedirect.com/book/9780120975525/evaluating-the-quality-of-learning},
   urldate   = {2025-08-20}
 }
+
+@book{bloom1956,
+  author    = {Bloom, Benjamin S. and Engelhart, Max D. and Furst, Edward J. and Hill, Walter H. and Krathwohl, David R.},
+  title     = {Taxonomy of Educational Objectives: The Classification of Educational Goals; Handbook I: Cognitive Domain},
+  year      = {1956},
+  publisher = {David McKay Company, Inc.},
+  address   = {New York},
+  url       = {https://scholar.google.com/citations?view_op=view_citation&hl=en&user=XIwE3gsAAAAJ&citation_for_view=XIwE3gsAAAAJ:4fKUyHm3Qg0C},
+  urldate   = {2025-08-20}
+}
